--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,49 @@ html, body {
     min-height: 100vh;
 }
 body    {
-    background-color: rgb(91, 63, 245);
+    background-color: rgb(113, 90, 241);
     color: #e4750d; display: grid; 
     grid-template-rows: auto 1fr auto;
-
+    font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     text-align: center;
 }
 .logo   {
-    width: 100px; 
+    width: 200px; 
 }
+
+a:link {
+    text-decoration: none;
+}
+
+/* unvisited link */
+a:link {
+    color: rgb(255, 255, 255);
+  }
+  
+  /* visited link */
+  a:visited {
+    color: rgb(255, 255, 255);
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: rgb(235, 137, 10)
+  }
+  
+  /* selected link */
+  a:active {
+    color: blue;
+  }
+
+.p {
+  letter-spacing: ;
+  /* Text may be inflated in this exact proportion */
+  font-size:smaller;
+  text-decoration-thickness: 1px;
+}
+
+  .footer {
+    font-size: 0.705em; /* 10px/16=0.875em */
+    color: white
+  }
