--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ html, body {
     min-height: 100vh;
 }
 body    {
-    background-color: rgb(113, 90, 241);
-    color: #e4750d; display: grid; 
+    background-color: rgb(60, 31, 224);
+    color: #e2740d; display: grid; 
     grid-template-rows: auto 1fr auto;
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
@@ -30,7 +30,7 @@ a:link {
   
   /* mouse over link */
   a:hover {
-    color: rgb(235, 137, 10)
+    color: orange;
   }
   
   /* selected link */
@@ -41,11 +41,12 @@ a:link {
 .p {
   letter-spacing: ;
   /* Text may be inflated in this exact proportion */
+  color:orange;
   font-size:smaller;
   text-decoration-thickness: 1px;
 }
 
-  .footer {
+.footer {
     font-size: 0.705em; /* 10px/16=0.875em */
-    color: white
+    color: white;
   }
