--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,27 @@ body    {
     width: 200px; 
 }
 
+.ml9 {
+  position: relative;
+  font-weight: 100;
+  font-size: 3em;
+}
+
+.ml9 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.05m;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+
+.ml9 .letters {
+  transform-origin: 50% 75%;
+  display: inline-block;
+  line-height: 1em;
+}
+
 a:link {
     text-decoration: none;
 }
