bi directional text

--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,23 @@ html, body {
 }
 body    {
     background-color: rgb(60, 31, 224);
-    color: #e2740d; display: grid; 
+    color: rgb(255, 123, 0); display: grid; 
     grid-template-rows: auto 1fr auto;
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
-    text-align: center;
+    text-align:center;
 }
 .logo   {
     width: 200px; 
 }
+.nav    {
+    text-align: center;
+}
 
 .ml9 {
   position: relative;
-  font-weight: 100;
-  font-size: 3em;
+  font-weight: 500;
+  font-size: 2em;
 }
 
 .ml9 .text-wrapper {
@@ -27,12 +30,14 @@ body    {
   padding-right: 0.05em;
   padding-bottom: 0.1em;
   overflow: hidden;
+  letter-spacing: 0px;
 }
 
 .ml9 .letters {
-  transform-origin: 50% 75%;
+  transform-origin: 25% 50%;
   display: inline-block;
-  line-height: 1em;
+  line-height: 0.2em;
+  letter-spacing: 10px;
 }
 
 a:link {
@@ -51,7 +56,7 @@ a:link {
   
   /* mouse over link */
   a:hover {
-    color: orange;
+    color: rgb(255, 123, 0);
   }
   
   /* selected link */
@@ -62,12 +67,18 @@ a:link {
 .p {
   letter-spacing: ;
   /* Text may be inflated in this exact proportion */
-  color:orange;
+  color: rgb(255, 123, 0);
   font-size:smaller;
   text-decoration-thickness: 1px;
+  margin:0pt;
+}
+
+p.fsl {
+  letter-spacing: 8px;
 }
 
 .footer {
     font-size: 0.705em; /* 10px/16=0.875em */
     color: white;
+    letter-spacing: 2px;
   }
