--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,14 @@ html, body {
     min-height: 100vh;
 }
 body    {
-    background-color: rgb(60, 31, 224);
+    background-color: rgb(37, 8, 199);
     color: rgb(255, 123, 0); display: grid; 
     grid-template-rows: auto 1fr auto;
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     text-align:center;
 }
-.logo   {
+logo   {
     width: 200px; 
 }
 .nav    {
