--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,67 @@
+.header {
+ 
+}
 html, body {
     /* v = viewport height / window height */
     min-height: 100vh;
 }
 body    {
-    background-color: rgb(37, 8, 199);
+    background-color: #13262F;
     color: rgb(255, 123, 0); display: grid; 
     grid-template-rows: auto 1fr auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: auto;
     text-align:center;
 }
-logo   {
+.logo   {
     width: 200px; 
+    transition: transform 2.5s;
+}
+.logo:hover {
+    transform: rotateY(360deg);
 }
 .nav    {
     text-align: center;
+    justify-self: right;
+    align-self: right;
+    display: block;
+    background-color: #13262F;
+    padding: 12px;
+    color: #F15152;
 }
-
+.nav a:hover { 
+  /* this will customise the links */
+}
+.banner { 
+  min-height: 50vh;
+  /* background-color:#AF5D63; */
+  display: grid;
+  place-items: center;
+  background-image: url('images/banner2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.banner h3 {
+  font-size: 2.2em
+  color: white;
+  text-shadow: 3px 3px 1px black;
+  background-colour:rgba(0,0,0,0,5)
+}
 .ml9 {
   position: relative;
   font-weight: 500;
   font-size: 2em;
+  color: #F15152
 }
 
 .ml9 .text-wrapper {
   position: relative;
   display: inline-block;
-  padding-top: 0.05m;
-  padding-right: 0.05em;
-  padding-bottom: 0.1em;
+  padding-top: 0.05rem;
+  padding-right: 0.00rem;
+  padding-bottom: 0.0rem;
   overflow: hidden;
-  letter-spacing: 0px;
+  letter-spacing: 1px;
 }
 
 .ml9 .letters {
@@ -38,6 +69,7 @@ logo   {
   display: inline-block;
   line-height: 0.2em;
   letter-spacing: 10px;
+  color: #9DC5BB; 
 }
 
 a:link {
@@ -56,7 +88,7 @@ a:link {
   
   /* mouse over link */
   a:hover {
-    color: rgb(255, 123, 0);
+    color: #F15152;
   }
   
   /* selected link */
@@ -67,10 +99,11 @@ a:link {
 .p {
   letter-spacing: ;
   /* Text may be inflated in this exact proportion */
-  color: rgb(255, 123, 0);
+  color: rgb(255, 255, 255);
   font-size:smaller;
   text-decoration-thickness: 1px;
   margin:0pt;
+  display: block;
 }
 
 p.fsl {
@@ -79,6 +112,6 @@ p.fsl {
 
 .footer {
     font-size: 0.705em; /* 10px/16=0.875em */
-    color: white;
+    color: #ffffff;
     letter-spacing: 2px;
   }
